# findmyfrens

./: .gitignore  Cargo.toml  README.md
data/: 2022-04-08.csv  2022-06-05.csv  2022-12-05.csv  2023-02-11.csv  2023-06-11.csv
